--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,5 @@ repos:
         stages: [commit]
         entry: isort
         types: [python]
-
+# replace isort and flake8 by ruff
 exclude: "README.md"
