--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ max-complexity = 18
 
 [project]
 name = "bofire-converters"
-authors = ""
+version = "0.0.1"
+license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = ["Development Status :: 1 - Planning",
@@ -33,7 +34,7 @@ classifiers = ["Development Status :: 1 - Planning",
         "Intended Audience :: Developers"]
 dependencies = [
     "mopti==0.10.10",
-    "bofire==0.0.4",
+    "bofire>=0.0.4",
 ]
 
 [project.optional-dependencies]
