--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:    
   style:
-    name: Check style with ruff and black
+    name: Check style with ruff
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
