pyright needs pytest for test folder

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -33,4 +33,8 @@ jobs:
       - name: pyright
         run: |
           pip install pyright .
-          pyright
+          pyright bofire_converters
+      - name: pyright test
+        run: |
+          pip install pytest
+          pyright test
