--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,4 +30,4 @@ jobs:
           --outdir dist/
           .
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1
