--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dependencies = [
     "mopti>=0.10.10",
     "bofire>=0.0.12",
 ]
-
+dynamic = [
+  "version",
+]
 [project.urls]
 Homepage = "https://github.com/experimental-design/bofire-converters"
 
